src/style.css
/* page setup
--------------------------------
*/

@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

:root {
    font-family: 'Poppins', sans-serif;
    background-color: #e5e5e5;
    --blue: #0ea5e9;
    --red: #be123c;
    --green: #15803d;
    --yellow: #facc15;
    --white: #f8fafc;
    --black: #111827;
    --gray: #6b7280;
}

* {
    -webkit-tap-highlight-color: transparent;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* header
--------------------------------
*/

header {
    position: sticky;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: var(--white);
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    box-shadow: 0px 1px 8px var(--gray);
}

h1 {
    font-size: 2rem;
    font-weight: bold;
}

.right-side-header {
    display: flex;
    align-items: center;
    gap: 20px;
}

.profile-picture {
    width: 3rem;
    height: 3rem;
}

.create-view {
    background-color: var(--blue);
    color: var(--white);
    border: none;
    width: 7rem;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 16px;
}

.create-view:active {
    transform: translateY(2px);
}

/* projects area
--------------------------------
*/

.projects {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin-top: 20px;
    margin-bottom: 20px;
}


/* project card
--------------------------------
*/

.project-card {
    display: flex;
    flex-direction: column;
    width: 80%;
    height: 120px;
    background-color: var(--white);
    padding: 20px;
    border-radius: 20px;
    gap: 10px;
    box-shadow: 0px 5px 10px var(--gray);
}

.project-card:active {
    transform: translateY(2px);
}

.project-card>h2 {
    font-size: 1.4rem;
}

.project-description {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    line-height: 16px;    
    max-height: 75px;     
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
}

.close {
    align-self: flex-end;
    margin-top: auto;
}

.close:hover {
    cursor: pointer;
}

/* project card modifiers
--------------------------------
*/

.urgent {
    border: solid 4px var(--red);
}

.not-urgent {
    border: solid 4px var(--green);
}

.paused {
    border: solid 4px var(--yellow);
}

@media screen and (min-width: 750px) {
    .projects {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
    }
    .project-card {
        width: 400px;
        height: 120px;
    }
}

@media screen and (min-width: 1200px) {
    .projects {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 30px;
    }
    .project-card {
        width: 500px;
        height: 200px;
    }
}

